--- a/src/main/resources/templates/km/customer/home.html
+++ b/src/main/resources/templates/km/customer/home.html
@@ -12,6 +12,8 @@
         <h3>Customer Home</h3>
         <a th:href="@{join.do}">회원가입</a>
         <a th:href="@{login.do}">로그인</a>
+        <hr>
+        <a th:href="@{select.do}">회원정보</a>
     </div>
 </body>
 </html>
