--- a/src/main/resources/templates/se/test1.html
+++ b/src/main/resources/templates/se/test1.html
@@ -15,73 +15,112 @@
     * {
         font-family: 'NanumSquare';
     }
-    #lcate {
-        font-size: 20px;
+    a {
+        text-decoration: none;
+        color: black;
+    }
+    .myPage{
+        font-size: 15px;
+    }
+    #headerLine {
+        border-top: 1px solid #204710;
+    }
+    .lcate {
+        height: 15px;
+        font-size: 17px;
+        font-weight: bold;
+        color: #204710;
+        /* border-bottom: 1px #204710 solid; */
+    }
+    .mcate {
         font-weight: bold;
     }
+
+    .header {
+        height: 200px;
+        background-image: url('https://picsum.photos/200/300');
+        /* background-image: url('/src/main/resources/static/images/se/headerplant.jpg'); */
+        background-size: cover;
+        }
 
     </style>
 </head>
 <body>
+    
     <!-- 헤더 -->
-    <div class="container">
+    <div class="container header">
         <!-- 로고 마이페이지 -->
         <div class="row p-5">
             <div class="col-1 navbar-toggler d-flex align-items-center" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false">
                 <i id="tobbleButton" class="fa-solid fa-bars fa-xl" style="color: #204710;"></i>
             </div>
             <div class="col-10">
-                <div class="row">
-                    <span class="bg-light d-flex justify-content-center align-items-center" style="height: 100px;">로고이미지</span><br>
+                <div class="row d-flex justify-content-center align-items-center">
+                    <img th:src="@{/images/se/testlogo.png}" style="width: 255px;">
                 </div>
                 <div class="row">
-                    <span class="bg-light d-flex justify-content-center align-items-center">새로운 1인 가구 공구 문화</span>
+                    <span class="d-flex justify-content-center align-items-center" style="color: #204710;">새로운 1인 가구 공구 문화</span>
                 </div>
             </div>
             
-            <div class="col-1 d-flex flex-row-reverse align-items-center">
+            <div class="col-1 d-flex align-items-center">
                 <a href="#">
-                    <i class="fa-solid fa-circle-user fa-xl" style="color: #204710;"></i>
+                    <div class="row">
+                        <div class="col m-0 p-0 d-flex flex-row-reverse">
+                            <p class="myPage">마이페이지 &nbsp</p>
+                        </div>
+                        <div class="col-1 m-0 p-0">
+                            <i class="fa-solid fa-circle-user fa-xl" style="color: #204710;"></i>
+                        </div>
+                    </div>
                 </a>
             </div>
         </div>
-        <!-- 카테고리 -->
-        <div class="container bg-white opacity-75 fixed-top" style="margin-top: 130px;"><!-- style="position: fixed;" -->
-            <div class="row navbar-collapse p-3" id="navbarContent" > <!-- 처음에 접은 상태 => class에 collapse 추가 // style="position: fixed;"-->
-                <th:block th:each="one : ${llist}">
-                    <div class="col my-auto mt-3">
-                        <span id="lcate" th:text="${one.lname}"></span>
-                        <th:block id="lcate" th:text="${one.lname}"></th:block>
-                        <br>
-                        <th:block th:if="${one2.mcode/100} == ${one.lcode/100}" th:each="one2 : ${mlist}" >
-                            <a href="#" th:text="${one2.mname}"></a>
-                            <br>
-                            <th:block th:if="${one3.scode/10} == ${one2.mcode/10}" th:each="one3 : ${slist}">
-                                <button href="#" th:text="${one3.sname}"></button>
-                                <br>
-                            </th:block>
-                            <br>
-                        </th:block>
-                    </div>
-                </th:block>
-                <div class="col my-auto mt-3">
-                    <div class="row">
-                        <input class="col form-control mx-1" type="search" placeholder="검색어" aria-label="Search">
-                        <button class="col-2 btn" type="submit">
-                            <i class="fa-solid fa-magnifying-glass fa-lg" style="color: #204710;"></i>
-                        </button>
-                    </div>
-                    <div class="row">
-                        
-                    </div>
-                </div>
-            </div>
-        </div>   
     </div>
 
+    <div class="container-fluid">
+        <div id="headerLine"></div>
+    </div>
+
+    <!-- 카테고리 -->
+    <div class="container mb-5"><!-- style="position: fixed;" -->
+        <div class="row collapse navbar-collapse p-3" id="navbarContent" > <!-- 처음에 접은 상태 => class에 collapse 추가 // style="position: fixed;"-->
+            <th:block th:each="one : ${llist}">
+                <div class="col my-auto mt-3">
+                    <div class="lcate" th:text="${one.lname}"></div>
+                    <br>
+                    <th:block th:if="${one2.mcode/100} == ${one.lcode/100}" th:each="one2 : ${mlist}" >
+                        <i class="fa-solid fa-caret-down fa-xs"></i>
+                        <span class="mcate" th:text="${one2.mname}"></span>
+                        <br>
+                        <th:block th:if="${one3.scode/10} == ${one2.mcode/10}" th:each="one3 : ${slist}">
+                            <a href="#" class="scate p-3" th:text="${one3.sname}"></a>
+                            <br>
+                        </th:block>
+                        <br>
+                    </th:block>
+                    <hr>
+                </div>
+            </th:block>
+            <div class="col my-auto mt-3">
+                <div class="row">
+                    <input class="col form-control mx-1" type="search" placeholder="검색어" aria-label="Search">
+                    <button class="col-2 btn" type="submit">
+                        <i class="fa-solid fa-magnifying-glass fa-lg" style="color: #204710;"></i>
+                    </button>
+                </div>
+                <div class="row">
+                    
+                </div>
+            </div>
+        </div>
+    </div>   
+
+
     <!-- 본문 -->
-    <div class="container bg-danger opacity-25" id="mainContent">
-        <div style="height: 3000px;">본문어디갔어 이거</div>
+    <div class="container" id="mainContent">
+        <img src="https://picsum.photos/200/300" style="width: 100%; height: 400px;">
+        <!-- <div style="height: 3000px;">본문어디갔어 이거</div> -->
     </div>
 
     <!-- 부트스트랩 -->
@@ -91,43 +130,6 @@
     <!-- axios (https://cdnjs.com/libraries/axios) -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.3.5/axios.min.js" integrity="sha512-nnNHpffPSgINrsR8ZAIgFUIMexORL5tPwsfktOTxVYSv+AUAILuFYWES8IHl+hhIhpFGlKvWFiz9ZEusrPcSBQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script th:inline="javascript" type="text/javascript">
-        // 대분류 불러오기
-        // async function cateAction(){
-            // alert("안녕");
-
-            // const url = /*[[@{/api/sobun/lcategory.json}]]*/'';
-			// // console.log(url);
-			// const headers = {"Content-Type":"application/json"};
-			// const {data} = await axios.get(url, {headers});
-			// console.log(data.llist); // 확인
-
-            // const navbarContent = document.getElementById('navbarContent');
-            // navbarContent.innerHTML = '';
-            // console.log(data.llist[0]);
-            // for(let index = 0; index < data.llist.length; index++) {
-            //     // for(let tmp of data.llist){
-            //         // console.log(tmp);
-            //         navbarContent.innerHTML += 
-            //         '<div class="col my-auto mt-3">' + 
-            //             // `<button onclick="mcategoryAction('${tmp}')"> ${tmp} </button>` + 
-            //             `<button onclick="mcategoryAction('${data.llist[index]}',${index})"> ${data.llist[index]} </button>` + 
-            //             `<ul name="mcategory"></ul>`
-            //             '</div>';
-            //         }
-            //         navbarContent.innerHTML += 
-            //         `<div class="col mt-3">` +
-            //             `<div class="d-flex align-items-start flex-column bd-highlight mb-3" style="height: 200px;">` +
-            //                 `<div class="row mb-auto">` +
-            //                     `<input class="col form-control mx-1" type="search" placeholder="Search" aria-label="Search">` +
-            //                     `<button class="col-2 btn btn-outline-success" type="submit">icon</button>` +
-            //                 `</div>` +
-            //                 `<div class="row">` +
-            //                     `<div>살려조요</div>` +
-            //                 `</div>` +
-            //             `</div>` +
-            //         `</div>`;
-        // }
-
     </script>
 </body>
 </html>
