--- a/src/main/resources/templates/se/test1.html
+++ b/src/main/resources/templates/se/test1.html
@@ -12,6 +12,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
     @import url('https://cdn.rawgit.com/moonspam/NanumSquare/master/nanumsquare.css');
+
+    /* 반응형 제거 => meta name="viewport" 주석필요 */
+    /* .container {
+        width: 1120px;
+        max-width: none !important;
+    } */
+
     * {
         font-family: 'NanumSquare';
     }
