--- a/src/main/resources/templates/km/customer/footer.html
+++ b/src/main/resources/templates/km/customer/footer.html
@@ -17,7 +17,6 @@
             /* font-family: 'nanumsquare','MinSans-Regular', sans-serif; */
             font-family: 'NanumSquare';
             font-size: 15px;
-            overflow-x: hidden;
         }
         #wrapper {
             height: auto;
@@ -44,7 +43,6 @@
             margin-right: 20px;
         }
         #footer2 {
-            background-color: rgb(171, 214, 252); 
             height: 200px;
         }
         #footer2 .footer2_logo {
@@ -52,10 +50,14 @@
         }
         .footer_text1, .footer_text2 *, .footer_text3 *, .footer_text4 * {
             font-size: 13px;
-            color: red;
+            color: rgb(124, 124, 124);
         }
         #footer3 {
-            background-color: red; height: 50px;
+            background-color: rgb(236, 236, 236); 
+            height: 50px;
+        }
+        #footer3 * {
+            font-size: 12px;
         }
 
         ul {
