--- a/src/main/resources/templates/km/customer/footer.html
+++ b/src/main/resources/templates/km/customer/footer.html
@@ -18,6 +18,13 @@
             font-family: 'NanumSquare';
             font-size: 15px;
         }
+
+        html, body {
+            height: 100px;
+            padding: 0;
+            margin: 0 auto;
+        }
+
         #wrapper {
             height: auto;
             min-height: 100%;
@@ -63,6 +70,10 @@
         ul {
             padding: 0;
         }
+        .footer-width {
+            width: 1120px;
+            max-width: none !important;
+        }
         
     </style>
 </head>
@@ -78,7 +89,7 @@
 
     <footer>
         <div id="footer1">
-            <div class="container">
+            <div class="container footer-width">
                         <p>회사소개</p>
                         <p>이용약관</p>
                         <p>개인정보처리방침</p>
@@ -86,7 +97,7 @@
             </div>
         </div>
         <div id="footer2">
-            <div class="container">
+            <div class="container footer-width">
                 <div class="row">
                     <div class="col-5">
                         <img src="../../../static/images/noimage.jpg" class="footer2_logo" width="100px" height="80px">
@@ -108,9 +119,7 @@
                                 <span>12:00 ~ 13:00</span>
                             </div>
                             <div>
-                                주말, 공휴일은 휴무입니다<br>
-                                통화량 폭주로 전화연결이 안 될 경우,<br>
-                                게시판에 문의 남겨주시면 빠른 처리 해드리겠습니다.
+                                주말, 공휴일은 휴무입니다
                             </div>
                         </div>
                     </div>
@@ -152,7 +161,7 @@
         </div>
         
         <div id="footer3">
-            <div class="container">
+            <div class="container footer-width">
                 Copyright &copy; <strong>소분소분</strong> All right reserved. Design by PKNU.
             </div>   
         </div>
