--- a/src/main/resources/templates/km/customer/join.html
+++ b/src/main/resources/templates/km/customer/join.html
@@ -6,20 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Customer Join</title>
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
+    <style>
+        input {
+            margin-bottom: 10px;
+        }
+    </style>
 </head>
-<body>
+<body class="container">
     <div>
         <h3>고객용 회원가입</h3>
+        <a th:href="@{/customer/login.do}">로그인</a>
+        <hr>
 
-        <form th:action="@{/customer/join.do}" method="post">
-            <input type="text" name="id" placeholder="아이디" autofocus>
-            <input type="text" name="pw" placeholder="비밀번호" value="1">
-            <input type="text" name="name" placeholder="이름" value="이름">
-            <input type="tel" name="phone" placeholder="핸드폰번호" value="01011111111">
-            <input type="email" name="email" placeholder="이메일" value="a@naver.com">
-            <input type="text" name="nickname" placeholder="닉네임" value="닉넴">
-            <input type="radio" name="gender" value="M" >M
-            <input type="radio" name="gender" value="F" >F
+        <form th:action="@{/customer/join.do}" method="post"><br>
+            <input type="text" name="id" placeholder="아이디" autofocus><br>
+            <input type="text" name="pw" placeholder="비밀번호" value="1"><br>
+            <input type="text" name="name" placeholder="이름" value="이름"><br>
+            <input type="tel" name="phone" placeholder="핸드폰번호" value="01011111111"><br>
+            <input type="email" name="email" placeholder="이메일" value="a@naver.com"><br>
+            <input type="text" name="nickname" placeholder="닉네임" value="닉넴"><br>
+            <input type="radio" name="gender" value="M" >M &nbsp;
+            <input type="radio" name="gender" value="F" >F<br>
             <input type="submit" value="가입">
         </form>
     </div>
